[gd_scene load_steps=9 format=3 uid="uid://7my1bdgyps7l"]

[ext_resource type="Script" path="res://tres/game_3_pilih_soal.gd" id="1_1i8e1"]
[ext_resource type="Texture2D" uid="uid://efg332oymymu" path="res://img/aset/game_1/taman.png" id="1_mx6yo"]
[ext_resource type="Theme" uid="uid://nfcrl8srqqux" path="res://tres/button_back_soal_game_3.tres" id="2_gnivw"]
[ext_resource type="SystemFont" uid="uid://ccndfb05mlrvo" path="res://tres/Font_tombol.tres" id="3_17057"]
[ext_resource type="Texture2D" uid="uid://bybx35awbpt37" path="res://img/aset/game_3/gelembung_chat.png" id="4_v76rw"]
[ext_resource type="Theme" uid="uid://58ycrpgh2pmh" path="res://tres/back.tres" id="5_hyxvx"]
[ext_resource type="Texture2D" uid="uid://bkfjnasxct5e4" path="res://img/aset/back.png" id="6_2nb2n"]
[ext_resource type="Texture2D" uid="uid://j7rskavoih" path="res://img/aset/tanya.png" id="7_244lc"]

[node name="game_3_pilih_soal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1i8e1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="penting" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/penting"]
self_modulate = Color(1, 1, 1, 0.752941)
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("1_mx6yo")
expand_mode = 1

[node name="hapus" type="Button" parent="MarginContainer/VBoxContainer/penting"]
visible = false
layout_mode = 0
offset_left = 139.0
offset_top = 438.0
offset_right = 264.0
offset_bottom = 469.0
text = "Hapus ga niee?"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/penting"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="CanvasLayer" type="CanvasLayer" parent="MarginContainer/VBoxContainer/penting"]

[node name="BUKU" type="Button" parent="MarginContainer/VBoxContainer/penting"]
layout_mode = 0
offset_left = 590.0
offset_top = 164.0
offset_right = 895.0
offset_bottom = 272.0
theme = ExtResource("2_gnivw")
theme_override_constants/outline_size = 8
theme_override_constants/h_separation = 8
theme_override_constants/icon_max_width = 8
theme_override_constants/align_to_largest_stylebox = 8
theme_override_fonts/font = ExtResource("3_17057")
theme_override_font_sizes/font_size = 58
text = "BUKU"

[node name="MAKAN" type="Button" parent="MarginContainer/VBoxContainer/penting"]
layout_mode = 0
offset_left = 591.0
offset_top = 308.0
offset_right = 896.0
offset_bottom = 416.0
theme = ExtResource("2_gnivw")
theme_override_constants/outline_size = 8
theme_override_constants/h_separation = 8
theme_override_constants/icon_max_width = 8
theme_override_constants/align_to_largest_stylebox = 8
theme_override_fonts/font = ExtResource("3_17057")
theme_override_font_sizes/font_size = 58
text = "MAKAN"

[node name="KURSI" type="Button" parent="MarginContainer/VBoxContainer/penting"]
layout_mode = 0
offset_left = 938.0
offset_top = 161.0
offset_right = 1243.0
offset_bottom = 269.0
theme = ExtResource("2_gnivw")
theme_override_constants/outline_size = 8
theme_override_constants/h_separation = 8
theme_override_constants/icon_max_width = 8
theme_override_constants/align_to_largest_stylebox = 8
theme_override_fonts/font = ExtResource("3_17057")
theme_override_font_sizes/font_size = 58
text = "KURSI"

[node name="PENSIL" type="Button" parent="MarginContainer/VBoxContainer/penting"]
layout_mode = 0
offset_left = 942.0
offset_top = 308.0
offset_right = 1247.0
offset_bottom = 416.0
theme = ExtResource("2_gnivw")
theme_override_constants/outline_size = 8
theme_override_constants/h_separation = 8
theme_override_constants/icon_max_width = 8
theme_override_constants/align_to_largest_stylebox = 8
theme_override_fonts/font = ExtResource("3_17057")
theme_override_font_sizes/font_size = 58
text = "PENSIL"

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/penting"]
layout_mode = 0
offset_left = 101.0
offset_top = 218.0
offset_right = 547.0
offset_bottom = 391.0
texture = ExtResource("4_v76rw")
expand_mode = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/penting/TextureRect2"]
layout_mode = 0
offset_left = 66.0
offset_top = 26.0
offset_right = 397.0
offset_bottom = 128.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_17057")
theme_override_font_sizes/font_size = 32
text = "Haii Ibu, silahkan pilih 
kata mana yang akan 
dijadikan soal"
horizontal_alignment = 1

[node name="Keluar2_1" type="Button" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 7.0
offset_right = 138.0
offset_bottom = 111.0
theme = ExtResource("5_hyxvx")

[node name="TextureRect" type="TextureRect" parent="Keluar2_1"]
visible = false
layout_mode = 0
offset_left = 8.0
offset_top = 3.0
offset_right = 29.0
offset_bottom = 24.0
texture = ExtResource("6_2nb2n")
expand_mode = 1

[node name="Tanya" type="Sprite2D" parent="."]
position = Vector2(130, 573)
scale = Vector2(0.403704, 0.403704)
texture = ExtResource("7_244lc")

[connection signal="pressed" from="MarginContainer/VBoxContainer/penting/BUKU" to="." method="_on_buku_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/penting/MAKAN" to="." method="_on_makan_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/penting/KURSI" to="." method="_on_kursi_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/penting/PENSIL" to="." method="_on_pensil_pressed"]
[connection signal="pressed" from="Keluar2_1" to="." method="_on_keluar_2_1_pressed"]
